Make sure the category legend is always readable

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,7 +78,7 @@ body {
     text-decoration: none;
     color: #333;
     padding: 6px;
-    text-shadow: 0 0 20px 20px rgba(255,255,255,.8);
+    text-shadow: 0 0 0.1em white, 0 0 0.1em white, 0 0 0.1em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.3em white, 0 0 0.6em white;
     position: relative;
 }
 
@@ -89,10 +89,12 @@ body {
     height: 9px;
     border-radius: 50%;
     border: 2px solid #f00;
+    background: #fff;
     position: absolute;
     top: 50%;
     left: -.5em;
     margin-top: -4.5px;
+    box-shadow: 0 0 0.1em white, 0 0 0.1em white, 0 0 0.1em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.3em white, 0 0 0.6em white;
 }
 
 .category-filter .racism a:after {
